<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">




        <item
            android:id="@+id/drawer_main"
            android:icon="@drawable/bakingicon"
            android:title="@string/drawer_recipes" />



        <item
            android:id="@+id/drawer_favorite"
            android:icon="@drawable/favorites"
            android:title="@string/favorite" />

        <item
            android:id="@+id/drawer_Login"
            android:icon="@drawable/user"
            android:title="@string/Login" />

        <item
                android:id="@+id/drawer_about"
                android:title="@string/about"
                android:icon="@drawable/ic_about"
                android:orderInCategory="2"
                app:showAsAction="never" />

        <item
            android:id="@+id/drawer_add"
            android:icon="@drawable/addrecipe"
            android:title="@string/add" />

        <item
                android:id="@+id/drawer_setting"
                android:icon="@drawable/seeting"
                android:title="@string/drawer_setting"
                />





</menu>
